--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   go_router: ^6.5.6
   shared_preferences: ^2.1.0
   flutter_native_splash: ^2.2.19
+  flutter_bloc: ^8.1.2
+  firebase_core: ^2.10.0
+  firebase_auth: ^4.4.2
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
