--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,12 @@ dependencies:
   firebase_core: ^2.10.0
   firebase_auth: ^4.4.2
   equatable: ^2.0.5
+  cloud_firestore: ^4.5.3
+  email_validator: ^2.1.17
+  firebase_dynamic_links: ^5.1.1
+  hydrated_bloc: ^9.1.0
+  json_annotation: ^4.8.1
+  path_provider: ^2.0.14
 
 dev_dependencies:
   flutter_test:
@@ -53,6 +59,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  json_serializable: ^6.6.2
 # flutter_native_splash-development.yaml
 flutter_native_splash:
   color: "#ffffff"
