--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   hydrated_bloc: ^9.1.0
   json_annotation: ^4.8.1
   path_provider: ^2.0.14
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
