--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   json_annotation: ^4.8.1
   path_provider: ^2.0.14
   flutter_rating_bar: ^4.0.1
+  bloc_concurrency: ^0.2.2
 
 dev_dependencies:
   flutter_test:
