--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   path_provider: ^2.0.14
   flutter_rating_bar: ^4.0.1
   bloc_concurrency: ^0.2.2
+  image_picker: ^0.8.4+4
+  firebase_storage: ^11.0.0
 
 dev_dependencies:
   flutter_test:
