--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,9 @@ dependencies:
   flutter_stripe: ^9.2.1
   flutter_dotenv: ^5.1.0
   http: ^0.13.6
+  firebase_messaging: ^14.6.3
+  rxdart: ^0.27.7
+  flutter_local_notifications: ^14.1.1
 
 dev_dependencies:
   # The "flutter_lints" package below contains a set of recommended lints to
