--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   firebase_messaging: ^14.6.3
   rxdart: ^0.27.7
   flutter_local_notifications: ^14.1.1
+  pdf: ^3.10.4
+  printing: ^5.11.0
 
 dev_dependencies:
   # The "flutter_lints" package below contains a set of recommended lints to
